# bwa-flow

./: .gitignore  CMakeLists.txt  Jenkinsfile  Jenkinsfile-hwc  Jenkinsfile-intel  Jenkinsfile-local  LICENSE.txt  Makefile  README.md  Test  config.mk  config.mk.template  jenkinsut  run_sample.sh  setup.sh
benchmarks/: monitor.sh  profile_f1-cpu.sh  profile_f1.sh  profile_host.sh.template  profile_merlin2.sh  profile_merlin3.sh  run.sh
bitstream/smithwaterman/: bitstream.xclbin
bwa/: .gitignore  CMakeLists.txt  Makefile  bntseq.c  bntseq.h  bwa.c  bwa.h  bwa_wrapper.h  bwamem.c  bwamem.h  bwamem_pair.c  bwaseqio.c  bwt.c  bwt.h  bwtindex.c  config.mk  fastmap.c  kbtree.h  kseq.h  main.c  malloc_wrap.c  utils.c
cmake/: FindFalconLM.cmake  FindGoogle.cmake  FindHTS.cmake  FindXilinx.cmake  FindXilinxOCL.cmake
fpga/blaze-client/: Makefile  SWClient.h  main.cpp
fpga/blaze-task/: Makefile  SmithWaterman.cpp  conf
kflow/: CMakeLists.txt  Makefile
kflow/examples/: common.mk
kflow/examples/mmul/: Makefile  base.cpp  main.cpp
kflow/examples/norm/: Makefile  main.cpp
kflow/examples/norm2/: Makefile  compute.cpp
kflow/examples/norm3/: main.cpp
kflow/include/: Common.h  MapStage.h  Pipeline.h  Queue.h  Stage.h  kflow.h
kflow/include/kflow/: Common.h  IOStage.h  MapPartitionStage.h  MapStage.h  MegaPipe.h  OccupancyCounter.h  Pipeline.h  Queue.h  SinkStage.h  SourceStage.h  Stage.h
kflow/src/: Makefile  MegaPipe.cpp  Pipeline.cpp  Stage.cpp
src/: BWAOCLEnv.h  BamFileBuffer.h  BamReadStage.cpp  BamReadStage.h  BamSortStage.cpp  BamSortStage.h  BamWriteStage.cpp  BamWriteStage.h  BucketSortStage.cpp  BucketSortStage.h  BucketWriteStage.cpp  BucketWriteStage.h  Extension.cpp  Extension.h  FPGAAgent.cpp  FPGAAgent.h  FPGAPipeline.cpp  FPGAPipeline.h  IndexGenStage.cpp  IndexGenStage.h  IntelAgent.cpp  IntelAgent.h  MPIChannel.cpp  MPIChannel.h  MPIPipeline.cpp  MPIPipeline.h  MarkDupPartStage.cpp  MarkDupPartStage.h  MarkDupStage.cpp  MarkDupUtil.cpp  OpenCLEnv.h  Pipeline.cpp  Pipeline.h  ReorderAndWriteStage.cpp  ReorderAndWriteStage.h  SMemXCLAgent.cpp  SMemXCLAgent.h  SWRead.cpp  SWRead.h  SWTask.cpp  (+32 more)
src/bwa_inc_new/: bwa.h  bwamem.h  kstring.h  structuresnew.h
src/bwa_src_new/: bntseq_newflow.cpp  kopen.cpp  main.cpp  mem_pair_newflow.cpp  preprocess.cpp
src/fpga/: BWAOCLEnv.h  FPGAAgent.h  FPGAPipeline.cpp  FPGAPipeline.h  OpenCLEnv.h  SMemTask.cpp  SMemTask.h  SWTask.cpp  SWTask.h  Task.h
src/fpga/intel/: IntelAgent.cpp  IntelAgent.h
src/fpga/kernel/: smithwaterman.cpp
src/fpga/xlnx/: SMemXCLAgent.cpp  SMemXCLAgent.h  XCLAgent.cpp  XCLAgent.h
src/mpi/: MPIChannel.h  MPIPipeline.h
test/: .gitignore  CMakeLists.txt  ChannelTests.cpp  CommTest.cpp  FPGATests.cpp  FPGATests.h  Makefile  PipelineTests.cpp  TestCommon.h  UtilTests.cpp  bwa_test.sh  env.bats  global.bash  main.cpp  run-test.sh  test-config.sh  test-driver.sh  test-pac.cpp  test.bats  test_table.txt
test/data/: get-data.sh
test/data/bucket-bams/: .gitattributes  baseline.bam  part-000000.bam  part-000001.bam  part-000002.bam  part-000003.bam
test/src/: BamTests.cpp  BucketTest.cpp  ChannelTests.cpp  ChannelTests.h  FPGATests.cpp  FPGATests.h  PipelineTests.cpp  TestCommon.h  UtilTests.cpp  main.cpp
